syntax = "proto3";

package test.service.v1;

// Test gRPC 服务 - 纯 gRPC 接口
service TestService {
  rpc Hello(HelloRequest) returns (HelloResponse);
  rpc Test(TestRequest) returns (TestResponse);
  rpc PrivateTest(PrivateTestRequest) returns (PrivateTestResponse);
}

message HelloRequest {
  string req = 1;
}

message HelloResponse {
  string rep = 1;
}

message TestRequest {}

message TestResponse {
  string message = 1;
}

message PrivateTestRequest {}

message PrivateTestResponse {
  string message = 1;
}
